removed event listener to avoid create excess buttonn element when the total btn is clicked and also deployed to production

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div>FULL NAME</div>
 <input type="text" id="customer_name" required>
 <br> <br> <br>
-<button onclick="total(event)">TOTAL</button>
+<button class="total">TOTAL</button>
 <!-- <input type="button" value="TOTAL" onclick="total(event)> -->
 
 <div id="p-con">
